--- a/MLProxy/Components/_Imports.razor
+++ b/MLProxy/Components/_Imports.razor
@@ -8,3 +8,11 @@
 @using Microsoft.JSInterop
 @using MLProxy
 @using MLProxy.Components
+
+
+@using MLProxy.DAL;
+@using MLProxy.DAL.Models;
+@using System.Linq;
+@using System.Collections.Generic;
+@using Microsoft.EntityFrameworkCore;
+@using CMouss.IdentityFramework;
